--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -370,13 +370,11 @@ Architectural concepts such as privacy, continuity, and enclosure, which describ
 This section defines four architectural concepts and demonstrates how they can are defined in DSpace. As in the previous section, the purpose here is not to investigate the correctness of the concepts or an attempt to look at a complete list of these concepts, rather it's to look at how these concepts cab be defined logically using architectural qualities and spatial / geometric primitives.
 
 \subsection{Privacy}
-The concept of privacy in architecture implies a notion of separation and obscurity (not being visible). In the case of a room, privacy is defined as the room being separated from the main entrance of the building and having no visible doorways into the room from the main living space. Similarly, a doorway can be considered private if it is not visible from some vantage point (i.e. hidden door). The point here is that the precise definition of privacy depends on the context, i.e. a room, building, doorway. 
+The concept of privacy in architecture implies a notion of separation and obscurity (not being visible). In the case of a room, privacy can be defined as being separated from the main entrance of the building and having doorways which enhances the room's privacy. A doorway can be be defined as private with respect to its functionality of connecting two areas (rooms, hallways, etc.) together. With this consideration, a doorway can enhance or hinder the privacy of a room. A doorway enhances privacy if the doorways faces away from other local doorways and if it is not visible from the main living space. 
 
-Within DSpace, the concepts of privacy has been formally defined for rooms and doorways. 
-
-A door is private if it has the following attributes: (1) it is not visible from a central location (2) it does not mutually faces towards another door (3) it does not face towards the centroid of an adjacent room or space. A room is private if it has the following attributes: (1) it is positioned on the opposing side of the building with regard to the main entrance (2) all doors into the room are private, per the private door definition.
+Within DSpace, the concepts of privacy has been formally defined for rooms and doorways. A door is private if it has the following attributes: (1) it is not visible from the main living space, (2) it does not mutually faces towards another doorway and (3) it does not face towards the centroid of an adjacent room. A room is private if it has the following attributes: (1) it is positioned on the opposing side of the building with regard to the main entrance and (2) all doorways into the room are private, per the private doorway definition.
  
-The concept of privacy is represented in DSpace as a Prolog predicate. The single argument in the head indicates if the definition is for a room or door. The body is a conjunction of architectural qualities developed in the previous section.  
+Privacy is represented in DSpace as a Prolog predicate. The predicate takes a single argument, in the head, which indicates the room or doorway that is being checked. The body of the predicate is a conjunction of architectural qualities (from the previous section) that logically defines privacy per the definition outlined above. Note that there are two predicates, one for the definition of privacy for a room and one for privacy of a doorway.  
 
 \begin{verbatim}
    private(room) :-  opposing_side(room, main_entrance, building), 
